src/styles/_general.scss
/// File này viết CSS chung...
/// Những cái cụ thể khác viết trong những folder còn lại
body.overflow-disabled {
  overflow: hidden !important;
}

#backdrop {
  width: 100vw;
  height: 100vh;
  opacity: 0;
  position: fixed;
  z-index: 3;
  top: 0;
  left: -100%;
  visibility: hidden;
  background-color: rgba(0, 0, 0, 0.15);
  transition: all 0.25s 0.25s;
  &.is-visible {
    opacity: 1;
    visibility: visible;
    left: 0;
  }
}

.has-border-bottom {
  border-bottom: 1px solid var(--border--color, black);
}

